src/main/generated/de/dreierschach/retrocomputer/BasicParser.java
// Generated from de/dreierschach/retrocomputer/Basic.g4 by ANTLR 4.13.1
package de.dreierschach.retrocomputer;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class BasicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, NOT=54, NUMBER=55, DOUBLE_NUMBER=56, STRING_LITERAL=57, BOOL_LITERAL=58, 
		ASTERISK=59, SLASH=60, PERCENT=61, PLUS=62, MINUS=63, POW=64, EQUAL=65, 
		NOT_EQUAL=66, LESS=67, LESS_OR_EQUAL=68, GREATER=69, GREATER_OR_EQUAL=70, 
		AND=71, OR=72, XOR=73, FN_SIN=74, FN_COS=75, FN_TAN=76, FN_ASIN=77, FN_ACOS=78, 
		FN_ATAN=79, FN_SQR=80, FN_LOG=81, FN_ABS=82, FN_SGN=83, FN_CHR=84, FN_VAL=85, 
		FN_INT=86, FN_DBL=87, FN_STR=88, FN_RND=89, FN_SPC=90, FN_SUBSTR=91, FN_HEX=92, 
		FN_AHEX=93, FN_WIDTH=94, FN_HEIGHT=95, NL=96, SPACE=97, COMMENT=98, IDENTIFIER=99;
	public static final int
		RULE_program = 0, RULE_line = 1, RULE_statement = 2, RULE_forStatement = 3, 
		RULE_nextStatement = 4, RULE_assignment = 5, RULE_ifStatement = 6, RULE_thenStatement = 7, 
		RULE_elseStatement = 8, RULE_print = 9, RULE_println = 10, RULE_printNewline = 11, 
		RULE_goto = 12, RULE_gosub = 13, RULE_return = 14, RULE_end = 15, RULE_list = 16, 
		RULE_listAll = 17, RULE_listOne = 18, RULE_listFrom = 19, RULE_listTo = 20, 
		RULE_listFromTo = 21, RULE_clear = 22, RULE_cls = 23, RULE_new = 24, RULE_input = 25, 
		RULE_leftScroll = 26, RULE_rightScroll = 27, RULE_delay = 28, RULE_load = 29, 
		RULE_save = 30, RULE_dir = 31, RULE_del = 32, RULE_setMode = 33, RULE_color = 34, 
		RULE_bgcolor = 35, RULE_set = 36, RULE_drawLine = 37, RULE_drawEllipse = 38, 
		RULE_drawFEllipse = 39, RULE_drawRect = 40, RULE_drawFRect = 41, RULE_drawFace = 42, 
		RULE_drawFFace = 43, RULE_drawText = 44, RULE_drawFText = 45, RULE_drawCText = 46, 
		RULE_drawFCText = 47, RULE_arcade = 48, RULE_flip = 49, RULE_help = 50, 
		RULE_identifier = 51, RULE_expression = 52, RULE_keyboard = 53, RULE_functionCall = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "line", "statement", "forStatement", "nextStatement", "assignment", 
			"ifStatement", "thenStatement", "elseStatement", "print", "println", 
			"printNewline", "goto", "gosub", "return", "end", "list", "listAll", 
			"listOne", "listFrom", "listTo", "listFromTo", "clear", "cls", "new", 
			"input", "leftScroll", "rightScroll", "delay", "load", "save", "dir", 
			"del", "setMode", "color", "bgcolor", "set", "drawLine", "drawEllipse", 
			"drawFEllipse", "drawRect", "drawFRect", "drawFace", "drawFFace", "drawText", 
			"drawFText", "drawCText", "drawFCText", "arcade", "flip", "help", "identifier", 
			"expression", "keyboard", "functionCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'FOR'", "'TO'", "'STEP'", "'NEXT'", "'IF'", "'THEN'", "'ELSE'", 
			"'PRINT'", "'?'", "'@'", "','", "';'", "'GOTO'", "'GOSUB'", "'RETURN'", 
			"'END'", "'LIST'", "'CLEAR'", "'CLS'", "'NEW'", "'INPUT'", "'SCROLL'", 
			"'LEFT'", "'RIGHT'", "'DELAY'", "'LOAD'", "'SAVE'", "'DIR'", "'DEL'", 
			"'MODE'", "'COLOR'", "'SET'", "'LINE'", "'ELLIPSE'", "'FELLIPSE'", "'RECT'", 
			"'FRECT'", "'FACE'", "'FFACE'", "'TEXT'", "'AT'", "'FTEXT'", "'CTEXT'", 
			"'FCTEXT'", "'ARCADE'", "'FLIP'", "'HELP'", "'['", "']'", "'('", "')'", 
			"'KEY'", "'NOT'", null, null, null, null, "'*'", "'/'", "'%'", "'+'", 
			"'-'", "'^'", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'AND'", "'OR'", 
			"'XOR'", "'SIN'", "'COS'", "'TAN'", "'ASIN'", "'ACOS'", "'ATAN'", "'SQR'", 
			"'LOG'", "'ABS'", "'SGN'", "'CHR'", "'VAL'", "'INT'", "'DBL'", "'STR'", 
			"'RND'", "'SPC'", "'SUBSTR'", "'HEX'", "'AHEX'", "'WIDTH'", "'HEIGHT'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "NOT", "NUMBER", "DOUBLE_NUMBER", 
			"STRING_LITERAL", "BOOL_LITERAL", "ASTERISK", "SLASH", "PERCENT", "PLUS", 
			"MINUS", "POW", "EQUAL", "NOT_EQUAL", "LESS", "LESS_OR_EQUAL", "GREATER", 
			"GREATER_OR_EQUAL", "AND", "OR", "XOR", "FN_SIN", "FN_COS", "FN_TAN", 
			"FN_ASIN", "FN_ACOS", "FN_ATAN", "FN_SQR", "FN_LOG", "FN_ABS", "FN_SGN", 
			"FN_CHR", "FN_VAL", "FN_INT", "FN_DBL", "FN_STR", "FN_RND", "FN_SPC", 
			"FN_SUBSTR", "FN_HEX", "FN_AHEX", "FN_WIDTH", "FN_HEIGHT", "NL", "SPACE", 
			"COMMENT", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Basic.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BasicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public TerminalNode EOF() { return getToken(BasicParser.EOF, 0); }
		public List<TerminalNode> NL() { return getTokens(BasicParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(BasicParser.NL, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			line();
			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(112); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(111);
						match(NL);
						}
						}
						setState(114); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NL );
					setState(116);
					line();
					}
					} 
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(122);
				match(NL);
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(BasicParser.NUMBER, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).exitLine(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(NUMBER);
			setState(131);
			statement();
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(132);
				match(T__0);
				setState(133);
				statement();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(BasicParser.COMMENT, 0); }
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public NextStatementContext nextStatement() {
			return getRuleContext(NextStatementContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public PrintlnContext println() {
			return getRuleContext(PrintlnContext.class,0);
		}
		public PrintNewlineContext printNewline() {
			return getRuleContext(PrintNewlineContext.class,0);
		}
		public GotoContext goto_() {
			return getRuleContext(GotoContext.class,0);
		}
		public GosubContext gosub() {
			return getRuleContext(GosubContext.class,0);
		}
		public ReturnContext return_() {
			return getRuleContext(ReturnContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ClearContext clear() {
			return getRuleContext(ClearContext.class,0);
		}
		public ClsContext cls() {
			return getRuleContext(ClsContext.class,0);
		}
		public NewContext new_() {
			return getRuleContext(NewContext.class,0);
		}
		public InputContext input() {
			return getRuleContext(InputContext.class,0);
		}
		public LeftScrollContext leftScroll() {
			return getRuleContext(LeftScrollContext.class,0);
		}
		public RightScrollContext rightScroll() {
			return getRuleContext(RightScrollContext.class,0);
		}
		public DelayContext delay() {
			return getRuleContext(DelayContext.class,0);
		}
		public LoadContext load() {
			return getRuleContext(LoadContext.class,0);
		}
		public SaveContext save() {
			return getRuleContext(SaveContext.class,0);
		}
		public DirContext dir() {
			return getRuleContext(DirContext.class,0);
		}
		public DelContext del() {
			return getRuleContext(DelContext.class,0);
		}
		public SetModeContext setMode() {
			return getRuleContext(SetModeContext.class,0);
		}
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public ColorContext color() {
			return getRuleContext(ColorContext.class,0);
		}
		public BgcolorContext bgcolor() {
			return getRuleContext(BgcolorContext.class,0);
		}
		public DrawLineContext drawLine() {
			return getRuleContext(DrawLineContext.class,0);
		}
		public DrawEllipseContext drawEllipse() {
			return getRuleContext(DrawEllipseContext.class,0);
		}
		public DrawFEllipseContext drawFEllipse() {
			return getRuleContext(DrawFEllipseContext.class,0);
		}
		public DrawRectContext drawRect() {
			return getRuleContext(DrawRectContext.class,0);
		}
		public DrawFRectContext drawFRect() {
			return getRuleContext(DrawFRectContext.class,0);
		}
		public DrawFaceContext drawFace() {
			return getRuleContext(DrawFaceContext.class,0);
		}
		public DrawFFaceContext drawFFace() {
			return getRuleContext(DrawFFaceContext.class,0);
		}
		public DrawTextContext drawText() {
			return getRuleContext(DrawTextContext.class,0);
		}
		public DrawFTextContext drawFText() {
			return getRuleContext(DrawFTextContext.class,0);
		}
		public DrawCTextContext drawCText() {
			return getRuleContext(DrawCTextContext.class,0);
		}
		public DrawFCTextContext drawFCText() {
			return getRuleContext(DrawFCTextContext.class,0);
		}
		public ArcadeContext arcade() {
			return getRuleContext(ArcadeContext.class,0);
		}
		public FlipContext flip() {
			return getRuleContext(FlipContext.class,0);
		}
		public HelpContext help() {
			return getRuleContext(HelpContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(COMMENT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				forStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(141);
				nextStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(142);
				assignment();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(143);
				ifStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(144);
				print();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(145);
				println();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(146);
				printNewline();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(147);
				goto_();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(148);
				gosub();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(149);
				return_();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(150);
				end();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(151);
				list();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(152);
				clear();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(153);
				cls();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(154);
				new_();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(155);
				input();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(156);
				leftScroll();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(157);
				rightScroll();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(158);
				delay();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(159);
				load();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(160);
				save();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(161);
				dir();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(162);
				del();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(163);
				setMode();
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(164);
				set();
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(165);
				color();
				}
				break;
			case 28:
				enterOuterAlt(_localctx, 28);
				{
				setState(166);
				bgcolor();
				}
				break;
			case 29:
				enterOuterAlt(_localctx, 29);
				{
				setState(167);
				drawLine();
				}
				break;
			case 30:
				enterOuterAlt(_localctx, 30);
				{
				setState(168);
				drawEllipse();
				}
				break;
			case 31:
				enterOuterAlt(_localctx, 31);
				{
				setState(169);
				drawFEllipse();
				}
				break;
			case 32:
				enterOuterAlt(_localctx, 32);
				{
				setState(170);
				drawRect();
				}
				break;
			case 33:
				enterOuterAlt(_localctx, 33);
				{
				setState(171);
				drawFRect();
				}
				break;
			case 34:
				enterOuterAlt(_localctx, 34);
				{
				setState(172);
				drawFace();
				}
				break;
			case 35:
				enterOuterAlt(_localctx, 35);
				{
				setState(173);
				drawFFace();
				}
				break;
			case 36:
				enterOuterAlt(_localctx, 36);
				{
				setState(174);
				drawText();
				}
				break;
			case 37:
				enterOuterAlt(_localctx, 37);
				{
				setState(175);
				drawFText();
				}
				break;
			case 38:
				enterOuterAlt(_localctx, 38);
				{
				setState(176);
				drawCText();
				}
				break;
			case 39:
				enterOuterAlt(_localctx, 39);
				{
				setState(177);
				drawFCText();
				}
				break;
			case 40:
				enterOuterAlt(_localctx, 40);
				{
				setState(178);
				arcade();
				}
				break;
			case 41:
				enterOuterAlt(_localctx, 41);
				{
				setState(179);
				flip();
				}
				break;
			case 42:
				enterOuterAlt(_localctx, 42);
				{
				setState(180);
				help();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForStatementContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(BasicParser.EQUAL, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ForStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).enterForStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).exitForStatement(this);
		}
	}

	public final ForStatementContext forStatement() throws RecognitionException {
		ForStatementContext _localctx = new ForStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_forStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(T__1);
			setState(184);
			identifier();
			setState(185);
			match(EQUAL);
			setState(186);
			expression(0);
			setState(187);
			match(T__2);
			setState(188);
			expression(0);
			setState(191);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(189);
				match(T__3);
				setState(190);
				expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NextStatementContext extends ParserRuleContext {
		public NextStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nextStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).enterNextStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).exitNextStatement(this);
		}
	}

	public final NextStatementContext nextStatement() throws RecognitionException {
		NextStatementContext _localctx = new NextStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nextStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(BasicParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BasicListener ) ((BasicListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			identifier();
			setState(196);
			match(EQUAL);
			setState(197);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
